bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:4: error: illegal start of simple expression
} 
^